cluster/apps/default/foundry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry
  namespace: default
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
        - name: foundryvtt
          image: felddy/foundryvtt:10.285.0
          ports:
            - containerPort: 30000
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: foundry-data
