cluster/apps/default/foundry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry
  namespace: default
spec:
  selector:
    app: foundry
  ports:
    - name: http
      targetPort: http
      port: 30000
