cluster/apps/default/foundry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.default.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
spec:
  ingressClassName: internal
  rules:
    - host: foundry.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: foundry
                port:
                  name: http
            pathType: Prefix
            path: /
